--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="first">
         <div class="header">
             <div class="logo">
-                Header Logo
+                The Spice Island &trade;
             </div>
             <div class="links">
                 <ul>
@@ -30,7 +30,7 @@
                 </div>
                 <button class="sign-up">Sign Up</button>
             </div>
-            <img>
+            <img src="./box.jpg">
         </div>
     </div>
     <div class="second">
@@ -39,54 +39,54 @@
         </div>
         <div class="content">
             <div class="card">
-                <img>
+                <img src="./barberry.png">
                 <div class="description">
-                    Something 1
+                    Barberry, a thorny shrub with vibrant red berries, adds ornamental charm to gardens. Used in culinary and herbal remedies, its tart flavor and health benefits are noteworthy.                </div>
+            </div>
+            <div class="card">
+                <img src="./chilli.png">
+                <div class="description">
+                    Chilli, a fiery flavor enhancer, adds spice and heat to dishes worldwide. Its vibrant colors and bold taste create a culinary adventure that tantalizes taste buds.
                 </div>
             </div>
             <div class="card">
-                <img>
+                <img src="./pepper.png">
                 <div class="description">
-                    Something 2
-                </div>
+                    Pepper, a versatile spice, adds depth and heat to culinary creations worldwide. From mild to fiery, its diverse varieties enhance flavors, making dishes unforgettable.                </div>
             </div>
             <div class="card">
-                <img>
+                <img src="./saffron.png">
                 <div class="description">
-                    Something 3
-                </div>
-            </div>
-            <div class="card">
-                <img>
-                <div class="description">
-                    Something 4
-                </div>
+
+Saffron, a vibrant spice derived from Crocus sativus flowers, adds exquisite flavor, aroma, and golden hue to dishes, symbolizing luxury and culinary excellence.                </div>
             </div>
         </div>
     </div>
     <div class="third">
         <div class="quote">
-            This is an very inspiring quote
-        </div>
+            Here's to the crazy ones. The misfits. The rebels. The troublemakers. The round pegs in the square holes. The ones who see things differently. 
+            They're not fond of rules. And they have no respect for the status quo. You can quote them, disagree with them, glorify or vilify them.
+             About the only thing you can't do is ignore them. Because they change things. They push the human race forward. And while some may see them as the crazy ones, we see genius. 
+             Because the people who are crazy enough to think they can change the world, are the ones who do.        </div>
         <div class="author">
-            - Author.
+            - Frank Zappa.
         </div>
     </div>
     <div class="fourth">
         <div class="call-to-action">
             <div class="call">
                 <div class="msg">
-                    message
+                    Call to Action. Its time!
                 </div>
                 <div class="action">
-                    action
+                    we are dying in the midst of dirty pollution
                 </div>
             </div>
-            <button class="sign-up">Sign up</button>
+            <button class="call-sign-up">Sign up</button>
         </div>
     </div>
     <div class="footer">
-        <span class="copyright">&copy; Rakshit Ambi & co . All rights revserved</span>
+        <span class="copyright">Copyright &copy; Rakshit Ambi & co . All rights revserved</span>
     </div>
     
 </body>
