fixed the width of the description

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             </div>
             <div class="links">
                 <ul>
-                    <li><a href="#">link one</a></li>
-                    <li><a href="#">link two</a></li>
-                    <li><a href="#">link three</a></li>
+                    <li><a href="#">Buy</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Services</a></li>
                 </ul>
             </div>
         </div>
@@ -40,25 +40,23 @@
         <div class="content">
             <div class="card">
                 <img src="./barberry.png">
-                <div class="description">
-                    Barberry, a thorny shrub with vibrant red berries, adds ornamental charm to gardens. Used in culinary and herbal remedies, its tart flavor and health benefits are noteworthy.                </div>
+                <p class="description">
+                    Barberry, a thorny shrub with vibrant red berries, adds ornamental charm to gardens. Used in culinary and herbal remedies, its tart flavor and health benefits are noteworthy.                </p>
             </div>
             <div class="card">
                 <img src="./chilli.png">
-                <div class="description">
+                <p class="description">
                     Chilli, a fiery flavor enhancer, adds spice and heat to dishes worldwide. Its vibrant colors and bold taste create a culinary adventure that tantalizes taste buds.
-                </div>
+                </p>
             </div>
             <div class="card">
                 <img src="./pepper.png">
-                <div class="description">
-                    Pepper, a versatile spice, adds depth and heat to culinary creations worldwide. From mild to fiery, its diverse varieties enhance flavors, making dishes unforgettable.                </div>
+                <p class="description">
+                    Pepper, a versatile spice, adds depth and heat to culinary creations worldwide. From mild to fiery, its diverse varieties enhance flavors, making dishes unforgettable.                </p>
             </div>
             <div class="card">
                 <img src="./saffron.png">
-                <div class="description">
-
-Saffron, a vibrant spice derived from Crocus sativus flowers, adds exquisite flavor, aroma, and golden hue to dishes, symbolizing luxury and culinary excellence.                </div>
+                <p class="description">Saffron, a vibrant spice derived from Crocus sativus flowers, adds exquisite flavor, aroma, and golden hue to dishes, symbolizing luxury and culinary excellence.                </p>
             </div>
         </div>
     </div>
